--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-
-/* Your CSS Code here. */
-blockquote {
+p{
+	font-weight: bold;
+}
+blockquote{
 	max-width: 600px;
 	margin: 10px;
 	padding: 15px;
 	border-left: 8px solid green;
-	background: #f8fffe;
+	background-color: #f8fffe;
 	font-weight: bold;
 }
